--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="drops">
                         <button onclick="dropDown()"><img class="drop-icon" src="images/image.png"
                                 alt="Dropdown icon"></button>
-                        <div id="deDrop" class="dropdown-links">
+                        <div id="deDrop" class="dropdown-links fade">
                             <a href="#about">About</a>
                             <a href="#work-skills">Work / Skills</a>
                             <a href="#contact">Contact</a>
@@ -74,11 +74,13 @@
                             <div class="studies">
                                 <div class="years-names">
                                     <span>2025-</span>
-                                    Software Developer at ROC Nijmegen
+                                    <span>Software Developer</span>
+                                    at ROC Nijmegen
                                 </div>
                                 <div class="years-names">
                                     <span>2022-2024</span>
-                                    IT Systems and Devices at ROC Nijmegen
+                                    <span>IT Systems and Devices</span>
+                                    at ROC Nijmegen
                                 </div>
                             </div>
                         </div>
@@ -160,8 +162,9 @@
                         <ul class="languages">
                             <li><img class="languages-img" src="images/css-logo-final.png" alt="css logo"></li>
                             <li><img class="languages-img" src="images/html-logo-final.png" alt="html logo"></li>
-                            <li><img class="javascript-img" src="images/javascript-block-final.png" alt="javascript logo">
-                            <li><img class="java-img" src="images/java-cut.png" alt="java logo"></li>   
+                            <li><img class="javascript-img" src="images/javascript-block-final.png"
+                                    alt="javascript logo">
+                            <li><img class="java-img" src="images/java-cut.png" alt="java logo"></li>
                             </li>
                         </ul>
                     </div>
@@ -175,18 +178,18 @@
                 <div class="contact-links">
                     <div class="link-box">
                         <img src="images/Mail-icon.png" alt="Mail icon">
-                        <span>E-mail</span>
+                        E-mail
                         <span id="mail">1203611@student.roc-nijmegen.nl</span><button onclick="copying()"><img
                                 src="images/copy-icon-final.png" alt="copy icon"></button>
                     </div>
                     <div class="link-box">
                         <img src="images/github-icon.png" alt="Github icon">
-                        <span>Github</span>
+                        Github
                         <a href="https://github.com/Harm-Stokman">Harm-Stokman</a>
                     </div>
                     <div class="link-box">
                         <img src="images/linked.png" alt="Linkedin icon">
-                        <span>LinkedIn</span>
+                        LinkedIn
                         <a href="https://www.linkedin.com/in/harm-stokman-8077bb297/">Harm Stokman</a>
                     </div>
                 </div>
