laatste verwerking javascript

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <script src="script/script.js"></script>
-    <script src="script/script-twee.js"></script>
 </head>
 
 <body>
@@ -21,19 +20,19 @@
             <a class="title" href="index.html">Harm Stokman</a>
             <ul>
                 <li>
-                    <a class="link" href="#About-Me">About</a>
+                    <a class="link" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="link" href="#Work-skills">Work / Skills</a>
+                    <a class="link" href="#work-skills">Work / Skills</a>
                 </li>
                 <li>
-                    <a class="link" href="#Contact">Contact</a>
+                    <a class="link" href="#contact">Contact</a>
                 </li>
                 <li>
                     <div class="drops">
                         <button onclick="dropDown()"><img class="drop-icon" src="images/image.png"
                                 alt="Dropdown icon"></button>
-                        <div id="deDrop" class="dropdown-links fade">
+                        <div id="deDrop" class="dropdown-links">
                             <a href="#about">About</a>
                             <a href="#work-skills">Work / Skills</a>
                             <a href="#contact">Contact</a>
@@ -179,7 +178,7 @@
                     <div class="link-box">
                         <img src="images/Mail-icon.png" alt="Mail icon">
                         E-mail
-                        <span id="mail">1203611@student.roc-nijmegen.nl</span><button onclick="copying()"><img
+                        <span id="mail">stokmanharm@gmail.com</span><button onclick="copying()"><img
                                 src="images/copy-icon-final.png" alt="copy icon"></button>
                     </div>
                     <div class="link-box">
