aanpassing in section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             </div>
         </section>
         <section id="about">
-            <h1>About me</h1>
+             <div class="section-text">
+                <h1>About me</h1>
             Click on an arrow to show more content.
+             </div>
             <div class="slideshow">
                 <img class="arrow-img left" src="images/white-arrow-left.png" alt="Arrow icon to the left"
                     onclick="slideTellenAbout(-1)">
@@ -97,8 +99,11 @@
             </div>
         </section>
         <section id="work-skills" class="dark-blue">
-            <h1>Work / Skills</h1>
+            <div class="section-text">
+                <h1>Work / Skills</h1>
             Click on an arrow to show more content.
+            </div>
+           
             <div class="slideshow">
                 <img class="arrow-img left" src="images/white-arrow-left.png" alt="Arrow icon to the left"
                     onclick="slideTellen(-1)">
